# native-ts

./: LICENSE.txt  README.md
compiler/: CMakeLists.txt  main.cpp
compiler/frontend/: UserOpts.h
compiler/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Token.h
ntsc/: CMakeLists.txt  main.cpp
ntsc/lexer/: Lexer.cpp  Lexer.h
tests/: test1.ts
